package com.job.designpattern.mediator;

public abstract class UnitedNations {
    public abstract void declare(String message, Country country);
}
